add docs for jabatan

--- a/docs/05.md
+++ b/docs/05.md
@@ -102,6 +102,82 @@ if ($result) {
 ?>
 ```
 
+Skrip utama disimpan dalam variabel `$result` untuk memasukkan data jabatan, lalu kita gunakan fungsi `if()` untuk menampilkan pesan jika proses insert data berhasil maupun gagal.
+
 ## File `jabatan_edit.php`
+
+```php
+<?php
+if(!defined('INDEX')) die();
+
+$id = $_GET['id'];
+$query = "SELECT * FROM jabatan WHERE id_jabatan='$id'";
+$result = mysqli_query($con, $query);
+$data = mysqli_fetch_assoc($result);
+?>
+
+<h2 class="judul">Edit Jabatan</h2>
+<form action="?hal=jabatan_update" method="post">
+    <input type="hidden" name="id" value="<?= $data['id_jabatan']?>">
+    <div class="form-group">
+        <label for="nama">Nama Jabatan</label>
+        <div class="input">
+            <input type="text" name="nama" id="nama" value="<?=$data['nama_jabatan']?>">
+        </div>
+    </div>
+
+    <div class="form-group">
+        <input type="submit" value="Simpan" class="tombol simpan">
+        <input type="reset" value="Reset" class="tombol reset">
+    </div>
+</form>
+```
+
+- Skrip di atas intinya sama dengan file `jabatan_tambah.php`, namun pada bagian atas ditambah skrip untuk mendapatkan data jabatan yang akan diedit dari database, untuk ditampilkan nilai defaultnya.
+- Di bagian awal juga perlu kita tambahkan `<input>` dengan type *hidden* untuk mendapatkan `id` dari data jabatan yang akan diedit.
+- Selanjutnya jika tombol <kbd>Simpan</kbd> diklik maka data akan diproses/ dilempar ke halaman `jabatan_update.php`
+
 ## File `jabatan_update.php`
+
+Skrip ini bisa *copy-paste* dari file `jabatan_insert.php`, bedanya terletak pada proses *query* datanya.
+
+```php
+<?php
+if(!defined('INDEX')) die();
+
+$id = $_POST['id'];
+$nama = $_POST['nama'];
+$query = "UPDATE jabatan SET nama_jabatan = '$nama' WHERE id_jabatan = '$id'";
+$result = mysqli_query($con, $query);
+
+if ($result) {
+    echo "Jabatan berhasil diperbaharui!";
+    echo "<meta http-equiv='refresh' content='2; url=?hal=jabatan'>";
+} else {
+    echo "Tidak dapat memperbaharui data!!<br>";
+    echo mysqli_error();
+}
+?>
+```
+
 ## File `jabatan_hapus.php`
+
+Skrip ini hampir sama dengan file `jabatan_insert.php` atau `jabatan_update.php`, namun perlu disesuaikan *query*nya.
+
+```php
+<?php
+if(!defined('INDEX')) die();
+
+$id = $_GET['id'];
+$query = "DELETE FROM jabatan WHERE id_jabatan = '$id'";
+$result = mysqli_query($con, $query);
+
+if ($result) {
+    echo "Jabatan berhasil dihapus!";
+    echo "<meta http-equiv='refresh' content='2; url=?hal=jabatan'>";
+} else {
+    echo "Tidak dapat menghapus data!!<br>";
+    echo mysqli_error();
+}
+?>
+```
