--- a/docs/03.md
+++ b/docs/03.md
@@ -47,10 +47,10 @@ Sekarang kita buat file `ceklogin.php`, berikut kodenya.
     $username = $_POST['username'];
     $password = md5($_POST['password']);
 
-    $query = mysqli_query($con,
-    "SELECT * FROM user WHERE username = '$username' AND password = '$password' ");
-    $data = mysqli_fetch_array($query);
-    $jml = mysqli_num_rows($query);
+    $query = "SELECT * FROM user WHERE username = '$username' AND password = '$password'";
+    $hasil = mysqli_query($con,$query);
+    $data = mysqli_fetch_array($hasil);
+    $jml = mysqli_num_rows($hasil);
 
     if ($jml > 0) {
         $_SESSION['username'] = $data['username'];
