--- a/docs/02.md
+++ b/docs/02.md
@@ -6,7 +6,7 @@ Kita buat folder `library` terlebih dahulu, lalu buat file `config.php` di dalam
 <?php
 $host = "localhost";
 $user = "root";
-$pass = "root";
+$pass = "";
 $db = "apg";
 
 $con = mysqli_connect($host, $user, $pass, $db);
